--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -56,6 +56,8 @@ parameters:
     type: comma_delimited_list
   ceph_mon_node_names:
     type: comma_delimited_list
+  opendaylight_api_node_ips:
+    type: comma_delimited_list
   DeployIdentifier:
     type: string
     description: >
@@ -297,7 +299,14 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: ironic_api_node_ips}
-
+                opendaylight_api_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: opendaylight_api_node_ips}
                 tripleo::profile::base::ceph::ceph_mon_initial_members:
                   list_join:
                   - ','
