--- a/puppet/vip-config.yaml
+++ b/puppet/vip-config.yaml
@@ -39,6 +39,7 @@ resources:
                 storage_virtual_ip: {get_input: storage_virtual_ip}
                 storage_mgmt_virtual_ip: {get_input: storage_mgmt_virtual_ip}
                 ironic_api_vip: {get_input: ironic_api_vip}
+                opendaylight_api_vip: {get_input: opendaylight_api_vip}
                 # public_virtual_ip and controller_virtual_ip are needed in
                 # both HAproxy & keepalived.
                 tripleo::haproxy::public_virtual_ip: {get_input: public_virtual_ip}
