gnocchi: use new authtoken parameters
Configure Gnocchi with authtoken new class in the Puppet module, and
also remove the useless parameters that didn't exist in the module.

Change-Id: I414990c4fd5c5c1cd43d50c7a3947a4a29f4587a

--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -13,6 +13,13 @@ parameters:
     description: The password for the gnocchi service and db account.
     type: string
     hidden: true
+  GnocchiBackend:
+    default: file
+    description: The short name of the Gnocchi backend to use. Should be one
+      of swift, rbd, or file
+    type: string
+    constraints:
+    - allowed_values: ['swift', 'file', 'rbd']
   KeystoneRegion:
     type: string
     default: 'regionOne'
@@ -37,12 +44,20 @@ outputs:
                 dport:
                   - 8041
                   - 13041
-            gnocchi::api::keystone_tenant: 'service'
-            gnocchi::keystone::auth::tenant: 'service'
-            gnocchi::keystone::auth::region: {get_param: KeystoneRegion}
+            gnocchi::api::enabled: true
+            gnocchi::api::manage_service: false
+            gnocchi::api::service_name: 'httpd'
+            gnocchi::keystone::auth::admin_url: { get_param: [ EndpointMap, GnocchiAdmin, uri ] }
+            gnocchi::keystone::auth::internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
             gnocchi::keystone::auth::password: {get_param: GnocchiPassword}
             gnocchi::keystone::auth::public_url: { get_param: [ EndpointMap, GnocchiPublic, uri ] }
-            gnocchi::keystone::auth::internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
-            gnocchi::keystone::auth::admin_url: { get_param: [ EndpointMap, GnocchiAdmin, uri ] }
+            gnocchi::keystone::auth::region: {get_param: KeystoneRegion}
+            gnocchi::keystone::auth::tenant: 'service'
+            gnocchi::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
+            gnocchi::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+            gnocchi::keystone::authtoken::password: {get_param: GnocchiPassword}
+            gnocchi::keystone::authtoken::project_name: 'service'
+            gnocchi::wsgi::apache::ssl: false
+            tripleo::profile::base::gnocchi::api::gnocchi_backend: {get_param: GnocchiBackend}
       step_config: |
         include ::tripleo::profile::base::gnocchi::api
