--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -211,6 +211,7 @@ resource_registry:
   OS::TripleO::Services::IronicApi: OS::Heat::None
   OS::TripleO::Services::IronicConductor: OS::Heat::None
   OS::TripleO::Services::NovaIronic: OS::Heat::None
+  OS::TripleO::Services::TripleoPackages: puppet/services/tripleo-packages.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
