--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -171,6 +171,7 @@ parameters:
       - OS::TripleO::Services::IronicConductor
       - OS::TripleO::Services::NovaIronic
       - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -192,6 +193,7 @@ parameters:
       - OS::TripleO::Services::ComputeNeutronL3Agent
       - OS::TripleO::Services::ComputeNeutronMetadataAgent
       - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Compute Nodes.
@@ -215,6 +217,7 @@ parameters:
       - OS::TripleO::Services::Timezone
       - OS::TripleO::Services::Snmp
       - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the BlockStorage nodes.
@@ -239,6 +242,7 @@ parameters:
       - OS::TripleO::Services::Snmp
       - OS::TripleO::Services::Timezone
       - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the ObjectStorage nodes.
@@ -263,6 +267,7 @@ parameters:
       - OS::TripleO::Services::Ntp
       - OS::TripleO::Services::Timezone
       - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the CephStorage nodes.
