Make sahara run via systemd
Via commit 0327fc2bbb1be9972d99e2e83d54d07410ad01d9 we added sahara
as a composable service. Let's make sure sahara-api and sahara-engine
run via systemd and not as a pacemaker resource. This is inline with the
HA NG spec.

Change-Id: I5634ad43771fba798892df6d2297c2634dcb6756

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -7,9 +7,8 @@ resource_registry:
   OS::TripleO::Tasks::ControllerPostPuppetRestart: ../extraconfig/tasks/post_puppet_pacemaker_restart.yaml
 
   # custom pacemaker services
-  # NOTE: For now we will need to specify overrides to all services
-  # which use pacemaker. In the future (with upcoming HA light work) this
-  # list will hopefully be much smaller however.
+  # NOTE: Please before adding any pacemaker-managed services, get in touch
+  # with bandini, Ng or beekhof
   OS::TripleO::Services::CinderBackup: ../puppet/services/pacemaker/cinder-backup.yaml
   OS::TripleO::Services::CinderVolume: ../puppet/services/pacemaker/cinder-volume.yaml
   OS::TripleO::Services::RabbitMQ: ../puppet/services/pacemaker/rabbitmq.yaml
@@ -19,5 +18,3 @@ resource_registry:
   OS::TripleO::Services::MySQL: ../puppet/services/pacemaker/database/mysql.yaml
   # Services that are disabled by default (use relevant environment files):
   OS::Tripleo::Services::ManilaShare: OS::Heat::None
-  OS::TripleO::Services::SaharaApi: ../puppet/services/pacemaker/sahara-api.yaml
-  OS::TripleO::Services::SaharaEngine: ../puppet/services/pacemaker/sahara-engine.yaml
