--- a/puppet/services/pacemaker/gnocchi-api.yaml
+++ b/puppet/services/pacemaker/gnocchi-api.yaml
@@ -24,5 +24,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [GnocchiServiceBase, role_data, config_settings]
+          - gnocchi::metricd::manage_service: false
+            gnocchi::metricd::enabled: false
       step_config: |
         include ::tripleo::profile::pacemaker::gnocchi::api
