--- a/puppet/services/pacemaker/gnocchi-metricd.yaml
+++ b/puppet/services/pacemaker/gnocchi-metricd.yaml
@@ -25,6 +25,7 @@ outputs:
         map_merge:
           - get_attr: [GnocchiServiceBase, role_data, config_settings]
           - gnocchi::metricd::manage_service: false
+            gnocchi::metricd::enabled: false
             tripleo::profile::pacemaker::gnocchi::gnocchi_indexer_backend: {get_attr: [GnocchiServiceBase, aux_parameters, gnocchi_indexer_backend]}
 
       step_config: |
