--- a/puppet/services/pacemaker/gnocchi-statsd.yaml
+++ b/puppet/services/pacemaker/gnocchi-statsd.yaml
@@ -25,6 +25,7 @@ outputs:
         map_merge:
           - get_attr: [GnocchiServiceBase, role_data, config_settings]
           - gnocchi::statsd::manage_service: false
+            gnocchi::statsd::enabled: false
             tripleo::profile::pacemaker::gnocchi::gnocchi_indexer_backend: {get_attr: [GnocchiServiceBase, aux_parameters, gnocchi_indexer_backend]}
       step_config: |
         include ::tripleo::profile::pacemaker::gnocchi::statsd
