Move MySQL settings out of puppet/controller.yaml
This moves the config settings out of controller.yaml for MySQL
and into puppet/services/database/mysql.yaml.

The top leve MysqlRootPassword is still maintained by default
in overcloud.yaml so that users who upgrade won't get
broken. New users may optionally specify the MysqlRootPassword
as a parameter instead which will take priority over the top
level generated parameter.

We drop the top level MysqlClusterUniquePart because it is no
longer used (I think it was a remnant from t-i-e).

Related-Bug: #1604414

Change-Id: I06ebac0f4c87dabfccefb2e550a64650868c5b26

--- a/puppet/services/pacemaker/database/mysql.yaml
+++ b/puppet/services/pacemaker/database/mysql.yaml
@@ -20,11 +20,21 @@ parameters:
                  via parameter_defaults in the resource registry.
     type: json
 
+resources:
+
+  MysqlBase:
+    type: ../../database/mysql.yaml
+    properties:
+      ServiceNetMap: {get_param: ServiceNetMap}
+      DefaultPasswords: {get_param: DefaultPasswords}
+      EndpointMap: {get_param: EndpointMap}
+
 outputs:
   role_data:
     description: Service MySQL with Pacemaker using composable services.
     value:
       service_name: mysql
       config_settings:
+        get_attr: [MysqlBase, role_data, config_settings]
       step_config: |
         include ::tripleo::profile::pacemaker::database::mysql
