Ironic: add missing haproxy and firewall configuration
Make sure Ironic API listens on a different IP than HAProxy.

Also open firewall ports for Ironic API and TFTP.

Change-Id: I9d843e76adcdb1085fd1e9fb7408a2387909382b

--- a/puppet/services/haproxy.yaml
+++ b/puppet/services/haproxy.yaml
@@ -75,6 +75,7 @@ outputs:
         tripleo::haproxy::heat_cloudwatch: true
         tripleo::haproxy::heat_cfn: true
         tripleo::haproxy::horizon: true
+        tripleo::haproxy::ironic: true
         tripleo::haproxy::haproxy_log_address: {get_param: HAProxySyslogAddress}
         tripleo::haproxy::haproxy_stats_user: {get_param: HAProxyStatsUser}
         tripleo::haproxy::haproxy_stats_password: {get_param: HAProxyStatsPassword}
