Move RabbitMQ settings out of controller.yaml
This moves the config settings out of controller.yaml for RabbitMQ
and into puppet/services/rabbitmq.yaml.

Related-Bug: #1604414

Change-Id: I6b3d71653fb91b89b85dae7df4088afff22b71ac

--- a/puppet/services/rabbitmq.yaml
+++ b/puppet/services/rabbitmq.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2016-04-08
+heat_template_version: 2016-10-14
 
 description: >
   RabbitMQ service configured with Puppet
@@ -34,6 +34,10 @@ parameters:
     default: false
     description: Enable IPv6 in RabbitMQ
     type: boolean
+  RabbitCookie:
+    type: string
+    default: ''
+    hidden: true
 
 outputs:
   role_data:
@@ -66,5 +70,19 @@ outputs:
           tcp_listen_options: '[binary, {packet, raw}, {reuseaddr, true}, {backlog, 128}, {nodelay, true}, {exit_on_close, false}, {keepalive, true}]'
           cluster_partition_handling: 'pause_minority'
           loopback_users: '[]'
+        rabbitmq::erlang_cookie:
+          yaql:
+            expression: $.data.passwords.where($ != '').first()
+            data:
+              passwords:
+                - {get_param: RabbitCookie}
+                - {get_param: [DefaultPasswords, rabbit_cookie]}
+        # NOTE: bind IP is found in Heat replacing the network name with the
+        # local node IP for the given network; replacement examples
+        # (eg. for internal_api):
+        # internal_api -> IP
+        # internal_api_uri -> [IP]
+        # internal_api_subnet - > IP/CIDR
+        rabbitmq::node_ip_address: {get_param: [ServiceNetMap, RabbitmqNetwork]}
       step_config: |
         include ::tripleo::profile::base::rabbitmq
