Disable Sahara by default
Users who want Sahara enable now can simply include the
environments/services/sahara.yaml Heat environment.

Change-Id: I3df96b6e78ba3eddb62e79d854862a7e2d614c51

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -170,8 +170,8 @@ resource_registry:
   OS::TripleO::Services::HAproxy: puppet/services/haproxy.yaml
   OS::TripleO::Services::Keepalived: puppet/services/keepalived.yaml
   OS::TripleO::Services::Memcached: puppet/services/memcached.yaml
-  OS::TripleO::Services::SaharaApi: puppet/services/sahara-api.yaml
-  OS::TripleO::Services::SaharaEngine: puppet/services/sahara-engine.yaml
+  OS::TripleO::Services::SaharaApi: OS::Heat::None
+  OS::TripleO::Services::SaharaEngine: OS::Heat::None
   OS::TripleO::Services::Redis: puppet/services/database/redis.yaml
   OS::TripleO::Services::NovaConductor: puppet/services/nova-conductor.yaml
   OS::TripleO::Services::MongoDb: puppet/services/database/mongodb.yaml
