--- a/environments/enable-tls.yaml
+++ b/environments/enable-tls.yaml
@@ -7,3 +7,6 @@ parameter_defaults:
   SSLIntermediateCertificate: ''
   SSLKey: |
     The contents of the private key go here
+
+resource_registry:
+  OS::TripleO::NodeTLSData: ../puppet/extraconfig/tls/tls-cert-inject.yaml
