Update authtoken parameters to match recent changes
Update authtoken parameters for:
- Aodh
- Ironic
- Manila
- Nova
- Ceilometer

Change-Id: Ie123b8da1a7af2e406aadca4775de9e8c4e6e1f5

--- a/puppet/services/aodh-base.yaml
+++ b/puppet/services/aodh-base.yaml
@@ -82,9 +82,10 @@ outputs:
         aodh::rabbit_password: {get_param: RabbitPassword}
         aodh::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         aodh::rabbit_port: {get_param: RabbitClientPort}
-        aodh::api::keystone_password: {get_param: AodhPassword}
-        aodh::api::keystone_auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
-        aodh::api::keystone_identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
+        aodh::keystone::authtoken::project_name: 'service'
+        aodh::keystone::authtoken::password: {get_param: AodhPassword}
+        aodh::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+        aodh::keystone::authtoken::auth_url: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         aodh::auth::auth_password: {get_param: AodhPassword}
         aodh::keystone::auth::public_url: {get_param: [EndpointMap, AodhPublic, uri]}
         aodh::keystone::auth::internal_url: {get_param: [EndpointMap, AodhInternal, uri]}
