--- a/puppet/services/ironic-api.yaml
+++ b/puppet/services/ironic-api.yaml
@@ -45,11 +45,11 @@ outputs:
           # the TFTP server IP in ironic-conductor.yaml as it should not be
           # the VIP, but rather a real IP of the controller.
           - ironic::my_ip: {get_param: [EndpointMap, MysqlInternal, host]}
-            ironic::api::admin_password: {get_param: IronicPassword}
-            ironic::api::admin_tenant_name: 'service'
-            ironic::api::admin_user: 'ironic'
-            ironic::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
-            ironic::api::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+            ironic::api::authtoken::password: {get_param: IronicPassword}
+            ironic::api::authtoken::project_name: 'service'
+            ironic::api::authtoken::username: 'ironic'
+            ironic::api::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+            ironic::api::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             ironic::api::port: {get_param: [EndpointMap, IronicInternal, port]}
             # This is used to build links in responses
             ironic::api::public_endpoint: {get_param: [EndpointMap, IronicPublic, uri_no_suffix]}
