--- a/puppet/services/manila-api.yaml
+++ b/puppet/services/manila-api.yaml
@@ -43,9 +43,10 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [ManilaBase, role_data, config_settings]
-          - manila::api::keystone_password: {get_param: ManilaPassword}
-            manila::api::keystone_auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
-            manila::api::keystone_auth_host: {get_param: [EndpointMap, ManilaInternal, host]}
+          - manila::keystone::authtoken::password: {get_param: ManilaPassword}
+            manila::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
+            manila::keystone::authtoken::auth_url: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
+            manila::keystone::authtoken::project_name: 'service'
             manila::keystone::auth::public_url: {get_param: [EndpointMap, ManilaV1Public, uri]}
             manila::keystone::auth::internal_url: {get_param: [EndpointMap, ManilaV1Internal, uri]}
             manila::keystone::auth::admin_url: {get_param: [EndpointMap, ManilaV1Admin, uri]}
@@ -54,7 +55,6 @@ outputs:
             manila::keystone::auth::admin_url_v2: {get_param: [EndpointMap, ManilaAdmin, uri]}
             manila::keystone::auth::password: {get_param: ManilaPassword }
             manila::keystone::auth::region: {get_param: KeystoneRegion }
-            manila::api::keystone_tenant: 'service'
       step_config: |
         include ::tripleo::profile::base::manila::api
 
