--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -61,7 +61,10 @@ outputs:
                   - 8774
                   - 13774
                   - 8775
-            nova::api::admin_tenant_name: 'service'
+            nova::keystone::authtoken::project_name: 'service'
+            nova::keystone::authtoken::password: {get_param: NovaPassword}
+            nova::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+            nova::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             nova::api::enabled: true
             nova::api::default_floating_pool: 'public'
             nova::api::sync_db_api: true
