Fix Flavor get_param for Block Storage.
The get_param of the flavor was not pointing to the right parameter,
leading to an empty flavor for the block storage and a failure during
validation.

Change-Id: Id9a3d5756be956cedf060443533b84fcc66e721c
Closes-Bug: 1616453

--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -106,7 +106,7 @@ resources:
     properties:
       image:
         {get_param: BlockStorageImage}
-      flavor: {get_param: Flavor}
+      flavor: {get_param: OvercloudBlockStorageFlavor}
       key_name: {get_param: KeyName}
       networks:
         - network: ctlplane
