Set NeutronL3HA to false when deploying DVR
This patch sets NeutronL3HA to false when the DVR environment is
included on deployment. L3 HA isn't supported with DVR routers and is
disabled by defaults in our templates but upgrading users might have it
enabled in their existing overclouds.  Including the setting here with
an appropriate comment gives us some sort of mechanism to convey to the
upgrading user what they need to do. This will have no effect on users
not using L3 HA or deploying new overclouds.

Change-Id: If036ae2b88225f5a7d5f295eb5e6874d2fbb3f72

--- a/environments/neutron-ovs-dvr.yaml
+++ b/environments/neutron-ovs-dvr.yaml
@@ -22,3 +22,11 @@ parameter_defaults:
   # We also need to set the proper agent mode for the L3 agent.  This will only
   # affect the agent on the controller node.
   NeutronL3AgentMode: 'dvr_snat'
+
+  # L3 HA isn't supported for DVR enabled routers. If upgrading from a system
+  # where L3 HA is enabled and has neutron routers configured, it is
+  # recommended setting this value to true until such time all routers can be
+  # migrated to DVR routers. Once migration of the routers is complete,
+  # NeutronL3HA can be returned to false. All new systems should be deployed
+  # with NeutronL3HA set to false.
+  NeutronL3HA: false
